# hypoAI

./: .env.example  .eslintrc.js  .gitignore  ARCHITECTURE.md  ARCHITECTURE_MVP.md  README.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  package-lock.json  package.json  tsconfig.json
apps/backend/: pyproject.toml  requirements.txt  run.sh  test_agents.py  test_literature_agent.py  test_literature_discovery.py  test_setup.py
apps/backend/schemas/: literature_discovery_output.json
apps/backend/synthai_backend/: __init__.py  config.py  main.py  mcp_client.py  models.py  orchestrator.py  rate_limiter.py
apps/backend/synthai_backend/agents/: __init__.py  dataset_builder.py  dataset_discovery_agent.py  literature_agent.py  literature_discovery_agent_v2.py  llm_variable_matcher.py  models.py  nhanes_metadata_fetcher.py  orchestrator.py
apps/backend/synthai_backend/core/: smart_selector.py
apps/backend/synthai_backend/utils/: __init__.py  nhanes_fetcher.py
apps/frontend/: index.html  package.json
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: PaperCard.tsx
apps/mcp-tools/nhanes/: README.md  package.json
apps/mcp-tools/nhanes/src/: index.ts  metadata-loader.ts
apps/mcp-tools/nhanes/tests/: nhanes-client.test.ts
apps/mcp-tools/physionet/: package.json
apps/mcp-tools/physionet/src/: index.ts  physionet-client.ts  types.ts
apps/mcp-tools/seer/: package.json  tsconfig.json
apps/mcp-tools/seer/src/: index.ts  seer-client.ts  types.ts
data/: NHANES_DATA_LOADER_GUIDE.md  README.md  nhanes_data_loader_all_years.py  nhanes_embedding_simple.ipynb  requirements.txt  simple_nhanes_fetcher.py
